--- a/src/main-styles.scss
+++ b/src/main-styles.scss
@@ -3,11 +3,13 @@
 body{
     margin: 0;
     padding: 0;
-    overflow: hidden;
+    overflow-y: auto;
+    overflow-x: hidden;
 }
 
 .Main{
-    overflow: hidden;
+    overflow-y: auto;
+    overflow-x: hidden;
     max-width: 100vw;
     height: 100vh;
 }
@@ -15,5 +17,6 @@ body{
 .root{
     max-width: 100vw;
     height: 100vh;
-    overflow: hidden;
+    overflow-y: auto;
+    overflow-x: hidden;
 }
